Fix combined DEPTH_STENCIL_ATTACHMENT binding in WebGL 2.0 https://bugs.webkit.org/show_bug.cgi?id=223337

Reviewed by Darin Adler.

In WebGL 2.0 contexts, DEPTH_STENCIL_ATTACHMENT is considered
an alias for DEPTH_ATTACHMENT + STENCIL_ATTACHMENT.

Fixes forthcoming strengthened conformance test in
https://github.com/KhronosGroup/WebGL/pull/3455

* LayoutTests/TestExpectations:
* Source/WebCore/html/canvas/WebGLFramebuffer.cpp:
(WebCore::WebGLFramebuffer::removeAttachmentFromBoundFramebuffer):
(WebCore::WebGLFramebuffer::setAttachmentInternal):
(WebCore::WebGLFramebuffer::removeAttachmentInternal):

Canonical link: https://commits.webkit.org/252695@main