Source/WebCore/html/canvas/WebGLFramebuffer.cpp
@@ -529,6 +529,10 @@ void WebGLFramebuffer::removeAttachmentFromBoundFramebuffer(const AbstractLocker
     RefPtr<WebGLAttachment> attachmentObject = getAttachment(attachment);
     if (attachmentObject) {
         attachmentObject->onDetached(locker, context()->graphicsContextGL());
+        if (attachment == GraphicsContextGL::DEPTH_STENCIL_ATTACHMENT && context()->isWebGL2()) {
+            m_attachments.remove(GraphicsContextGL::DEPTH_ATTACHMENT);
+            m_attachments.remove(GraphicsContextGL::STENCIL_ATTACHMENT);
+        }
         m_attachments.remove(attachment);
         drawBuffersIfNecessary(false);
 #if !USE(ANGLE)
@@ -865,7 +869,12 @@ void WebGLFramebuffer::setAttachmentInternal(GCGLenum attachment, GCGLenum texTa
 
     removeAttachmentInternal(locker, attachment);
     if (texture && texture->object()) {
-        m_attachments.set(attachment, WebGLTextureAttachment::create(texture, texTarget, level, layer));
+        auto textureAttachment = WebGLTextureAttachment::create(texture, texTarget, level, layer);
+        if (attachment == GraphicsContextGL::DEPTH_STENCIL_ATTACHMENT && context()->isWebGL2()) {
+            m_attachments.set(GraphicsContextGL::DEPTH_ATTACHMENT, textureAttachment.ptr());
+            m_attachments.set(GraphicsContextGL::STENCIL_ATTACHMENT, textureAttachment.ptr());
+        }
+        m_attachments.set(attachment, WTFMove(textureAttachment));
         drawBuffersIfNecessary(false);
         texture->onAttached();
     }
@@ -881,7 +890,12 @@ void WebGLFramebuffer::setAttachmentInternal(GCGLenum attachment, WebGLRenderbuf
 
     removeAttachmentInternal(locker, attachment);
     if (renderbuffer && renderbuffer->object()) {
-        m_attachments.set(attachment, WebGLRenderbufferAttachment::create(renderbuffer));
+        auto renderbufferAttachment = WebGLRenderbufferAttachment::create(renderbuffer);
+        if (attachment == GraphicsContextGL::DEPTH_STENCIL_ATTACHMENT && context()->isWebGL2()) {
+            m_attachments.set(GraphicsContextGL::DEPTH_ATTACHMENT, renderbufferAttachment.ptr());
+            m_attachments.set(GraphicsContextGL::STENCIL_ATTACHMENT, renderbufferAttachment.ptr());
+        }
+        m_attachments.set(attachment, WTFMove(renderbufferAttachment));
         drawBuffersIfNecessary(false);
         renderbuffer->onAttached();
     }
@@ -892,6 +906,10 @@ void WebGLFramebuffer::removeAttachmentInternal(const AbstractLocker& locker, GC
     WebGLAttachment* attachmentObject = getAttachment(attachment);
     if (attachmentObject) {
         attachmentObject->onDetached(locker, context()->graphicsContextGL());
+        if (attachment == GraphicsContextGL::DEPTH_STENCIL_ATTACHMENT && context()->isWebGL2()) {
+            m_attachments.remove(GraphicsContextGL::DEPTH_ATTACHMENT);
+            m_attachments.remove(GraphicsContextGL::STENCIL_ATTACHMENT);
+        }
         m_attachments.remove(attachment);
         drawBuffersIfNecessary(false);
     }
